# fastapi-backend-course

simple_backend/src/task_tracker/: README.md  config.py  data_task.json  main.py  pyproject.toml
Урок 1: Git/src/: main.py
